--- a/style.css
+++ b/style.css
@@ -95,17 +95,23 @@ img{
     box-shadow:var(--shadow);
     padding:1.5rem;
 }
+.top-box-a{
+    grid-area:top-box-a;
+}
+.top-box-b{
+    grid-area:top-box-b;
+}
 .top-box .price{
     font-size:2rem;
+}
+
+.top-box-a .btn{
+    border-radius:14px;
+    text-align:center;
 }
 .top-box-a .btn:hover{
     background:var(--primary);
     background:var(--btn);
-    border-radius:14px;
-}
-.top-box-a .btn{
-    border-radius:14px;
-    text-align:center;
 }
 .top-box-b .btn{
     border-radius:14px;
@@ -114,14 +120,16 @@ img{
 .top-box-b .btn:hover{
     background:var(--primary);
     background:var(--btn);
+}
+.showCase .btn{
     border-radius:14px;
+    text-align:center;
 }
-.top-box-a{
-    grid-area:top-box-a;
+.showCase .btn:hover{
+    background:var(--primary);
+    background:var(--btn);
 }
-.top-box-b{
-    grid-area:top-box-b;
-}
+
 /* boxes */
 .boxes{
     display:grid;
@@ -142,6 +150,13 @@ img{
     grid-gap:20px;
     grid-template-columns: repeat(2,1fr);
     padding:3rem;
+}
+.info .btn{
+    border-radius:14px;
+}
+.info .btn:hover{
+    background:var(--primary);
+    background:var(--btn);
 }
 /* portfolio */
 .portfolio{
